--- a/_posts/2021-01-07-불편한시선.md
+++ b/_posts/2021-01-07-불편한시선.md
@@ -1,10 +1,10 @@
 ---
 layout: post
-title: Sample blog post
-subtitle: Each post also has a subtitle
+title: Uncomfortable Eyes
+subtitle: Interactive Installation
 gh-repo: daattali/beautiful-jekyll
 gh-badge: [star, fork, follow]
-tags: [test]
+tags: [Creative Coding]
 comments: true
 ---
 
