Update and rename 2021-01-07-홈페이지 작업 리스트.md to 2021-01-22-홈페이지 작업 리스트.md

--- a/_posts/2021-01-22-홈페이지 작업 리스트.md
+++ b/_posts/2021-01-22-홈페이지 작업 리스트.md
@@ -6,17 +6,15 @@ tags: [일상]
 comments: true
 ---
 
-## 네이버 검색어 노출
+1. 네이버 검색어 노출
 
-## 기존 작업물들 post로 정리해 올리기
-  - 불편한 시선
-  - Ballplaying
-  - LG Smart Device 
-
-## 카테고리 주지 
+2.기존 작업물들 post로 정리해 올리기
   - 꼼꼼한 논문 리뷰와 코드
-  - Adios: 2020(Daily)
   - Project 정리
+    - 불편한 시선
+    - Ballplaying
+    - LG Smart Device 
   
-## 일상 포스팅
+3. 일상 포스팅
   - 자기성찰 글쓰기
+  - Adios: 2020(Daily)
