--- a/_posts/2021-06-07-clip.md
+++ b/_posts/2021-06-07-clip.md
@@ -44,25 +44,19 @@ ${<} I_i,T_i {>}$
 
 over the row  
 
-\begin{eqnarray*}
-l_i^{v \rightarrow u} = - log\frac{\exp{<} v_i,u_i {>}/\tau)}{\sum_{k=1}^{N}\exp{<} v_i,u_i {>}/\tau} 
-\end{eqnarray*} 
+$$l_i^{v \rightarrow u} = - log\frac{\exp{<} v_i,u_i {>}/\tau)}{\sum_{k=1}^{N}\exp{<} v_i,u_i {>}/\tau}$$ 
 
 \tau : temperature coefficient, just modifies the softmax distribution to make it a bit more steep
 familiar softmax : sum of all of I_1,T_i and get the probability distribution 
 -log : cross entropy loss over that softmax distribution
 
 over the column  
-\begin{eqnarray*}
-l_i^{v \rightarrow u} = - log\frac{\exp{<} u_i,v_i {>}/\tau)}{\sum_{k=1}^{N}\exp{<} u_i,v_i {>}/\tau} 
-\end{eqnarray*}
+$$l_i^{v \rightarrow u} = - log\frac{\exp{<} u_i,v_i {>}/\tau)}{\sum_{k=1}^{N}\exp{<} u_i,v_i {>}/\tau}$$ 
 
 
 Final Loss Vector
-\begin{eqnarray*}
 weight combination of those two and sum over the whole batch and avg 
-L = \frac{1}{N}{\sum_{i=1}^{N}(\lambda l_i^{v\rightarrow u}+(1-\lambda)l_i^{u\rightarrow v}}
-\end{eqnarray*}
+$$L = \frac{1}{N}{\sum_{i=1}^{N}(\lambda l_i^{v\rightarrow u}+(1-\lambda)l_i^{u\rightarrow v}}$$
 
 ### (2) Create dataset classifier from label text
 
