--- a/_posts/2021-01-21-홈페이지 작업 리스트.md
+++ b/_posts/2021-01-21-홈페이지 작업 리스트.md
@@ -3,6 +3,7 @@ layout: post
 title: 홈페이지 작업 리스트
 tags: [Settings]
 comments: true
+draft:true
 ---
 
 {: .box-note}
@@ -19,13 +20,6 @@ comments: true
 
   - **Multi GPU를 이용한 GAN 프레임워크 구축기: Image Generation / Image-to-Image Translation**
   - Conda에서 여러 버전의 CUDA 사용하기
-  
-  - Project
-    - LG Smart Device(6월 종강 이후)  
-      - 내용 보강
-  
-  - 실험일지 
-      - PGGAN eps 없으면 black out되는 것        
 
   - 책리뷰
     - 인공지능과 창작(6월 종강 이후)
